[gd_scene load_steps=7 format=2]

[ext_resource path="res://util/ConfirmDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://font/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://levelup/IconSelector.gd" type="Script" id=3]
[ext_resource path="res://levelup/menu_items/EnergyEfficiencyMenuItem.gd" type="Script" id=4]
[ext_resource path="res://art_exports/ui_HUD/ui_submenu_arrow.png" type="Texture" id=5]
[ext_resource path="res://util/Bouncer.tscn" type="PackedScene" id=6]

[node name="EnergyEfficiencyMenuItem" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1540.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionContainer" type="HBoxContainer" parent="."]
margin_right = 380.0
margin_bottom = 23.0

[node name="DescriptionLabel" type="Label" parent="DescriptionContainer"]
margin_right = 203.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Improve energy efficiency"

[node name="ConfirmDialog" parent="DescriptionContainer" instance=ExtResource( 1 )]
margin_left = 207.0
margin_right = 230.0
margin_bottom = 23.0

[node name="PercentSelector" type="MarginContainer" parent="."]
margin_top = 27.0
margin_right = 380.0
margin_bottom = 50.0
script = ExtResource( 3 )
icon_values = [ 0.75, 0.9, 1.0, 1.1 ]

[node name="Selections" type="HBoxContainer" parent="PercentSelector"]
margin_right = 380.0
margin_bottom = 23.0

[node name="Pct75" type="Label" parent="PercentSelector/Selections"]
margin_left = 30.0
margin_right = 62.0
margin_bottom = 23.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "75%"
align = 1

[node name="Pct90" type="Label" parent="PercentSelector/Selections"]
margin_left = 126.0
margin_right = 158.0
margin_bottom = 23.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "90%"
align = 1

[node name="Pct100" type="Label" parent="PercentSelector/Selections"]
margin_left = 217.0
margin_right = 258.0
margin_bottom = 23.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100%"
align = 1

[node name="Pct110" type="Label" parent="PercentSelector/Selections"]
margin_left = 313.0
margin_right = 354.0
margin_bottom = 23.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "110%"
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="PercentSelector"]
layer = 4

[node name="ComponentMenuArrow" parent="PercentSelector/CanvasLayer" instance=ExtResource( 6 )]
visible = false
margin_left = 290.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 22.0
script = null

[node name="arrow_img" type="Sprite" parent="PercentSelector/CanvasLayer/ComponentMenuArrow"]
position = Vector2( -1, -2 )
rotation = -1.5708
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 5 )
centered = false
